Creation user et admin

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -7,6 +7,8 @@
     "projects": "Projects",
     "home": "Home",
     "nameProject": "Project name",
+    "firstName": "First name",
+    "lastName": "Last name",
     "emailAddress": "E-mail address",
     "password": "Password",
     "confirmPassword": "Confirm your password",
@@ -14,6 +16,7 @@
     "passwordAtLeast1SpecialChar2Numbers": "The password should contain at least 1 special character and 2 numbers",
     "passwordDoesNotMatch": "Passwords must be the same",
     "rememberMe": "Remember me",
+    "creationNotice": "Please fill in the following fields to create your account.",
     "forgotPassword": "I forgot my password",
     "forgotPasswordNotice": "You will receive a reset link valid for 1 hour to your email address.",
     "resetMyPassword": "Reset my password",
