--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -9,12 +9,15 @@
     "project": "Mon projet",
     "projects": "Mes projets",
     "nameProject": "Nom du projet",
+    "firstName": "Prénom",
+    "lastName": "Nom",
     "emailAddress": "Adresse e-mail",
     "password": "Mot de passe",
     "confirmPassword": "Confirmez le mot de passe",
     "passwordAtLeast8Char": "Le mot de passe doit faire au moins 8 caractères",
     "passwordAtLeast1SpecialChar2Numbers": "Le mot de passe doit contenir au moins 1 caractère spécial et 2 chiffres",
     "passwordDoesNotMatch": "Les mots de passent doivent être identiques",
+    "creationNotice": "Veuillez remplir les champs suivants pour créer votre compte.",
     "rememberMe": "Se souvenir de moi",
     "sendMail": "Envoyer le rapport par mail au client",
     "forgotPassword": "Mot de passe oublié",
