--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -207,5 +207,12 @@
     "startingFrom": "À partir de",
     "unit": "unité",
     "clear": "Vider",
-    "apply": "Appliquer"
+    "apply": "Appliquer",
+    "startingDate": "Date de début",
+    "endingDate": "Date de fin",
+    "createProject": "Création d'un projet",
+    "addDocumentField": "Ajout d'un nouveau champ document",
+    "messagings": "Messageries",
+    "messaging": "Messagerie"
+
 }
