--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -8,6 +8,7 @@
     "home": "Home",
     "nameProject": "Project name",
     "firstName": "First name",
+    "addDocumentField": "Add a document",
     "lastName": "Last name",
     "emailAddress": "E-mail address",
     "password": "Password",
